force-app/main/default/objects/Alert__c/fields/Last_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Run__c</fullName>
    <description>Last time the alert ran</description>
    <label>Last Run</label>
    <type>DateTime</type>
</CustomField>