force-app/main/default/objects/Alert__c/fields/Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email__c</fullName>
    <description>Email to send notification to if email sending is enabled</description>
    <label>Notification Email</label>
    <type>Email</type>
</CustomField>