force-app/main/default/objects/Alert__c/fields/Objects__c.field-meta.xml
<CustomField>
    <fullName>Objects__c</fullName>
    <description>Comma separated list of  Objects related to the alert</description>
    <label>Objects</label>
    <length>255</length>
    <type>Text</type>
</CustomField>