force-app/main/default/objects/Alert__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>The query that will be used to get data</description>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>