force-app/main/default/objects/Alert__c/fields/Raw_Input__c.field-meta.xml
<CustomField>
    <fullName>Raw_Input__c</fullName>
    <description>The raw user input for the alert</description>
    <label>Raw Input</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>