force-app/main/default/objects/Alert__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>The schedule when the alert should run</description>
    <label>Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>