force-app/main/default/objects/Alert__c/fields/Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Wether to send an email as a notification</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>