force-app/main/default/objects/Alert__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <description>The condition that will trigger the alert</description>
    <inlineHelpText>Set the trigger condition for the alert</inlineHelpText>
    <label>Trigger</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>