force-app/main/default/objects/Alert__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Trigger__c</columns>
    <columns>Last_Run__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>